<resources>
    <string name="app_name">Adventurio</string>
    <string name="title_activity_login">Login to Adventurio</string>
    <string name="title_activity_register">Register to Adventurio</string>
    <string name="txt_login_email">Email</string>
    <string name="txt_login_password">Password</string>
    <string name="btn_login_loginBtn">Login</string>
    <string name="btn_login_registerBtn">Register</string>
    <string name="text1">Dont have an account? Click On Register!</string>
    <string name="txtUsername">Username</string>
    <string name="txtFname">First Name</string>
    <string name="txtSurname">Surname</string>
    <string name="txtConfPass">Confirm Password</string>
    <string name="btnAddImg">Add Image</string>
    <string name="txtPhoneNo">Phone Number</string>
    <string name="text2">Already have an account? Click On Login!</string>

    <!--Popup-->
    <string name="btnLogout">Logout</string>
    <string name="btnCancel">Cancel</string>
    <string name="txtPopup">Are you sure you want to logout?</string>

    <!--Login-->
    <string name="forgotPW">Forgot Password</string>
    <string name="getPass">Reset Password</string>
    <string name="backToLogin">Login</string>

    <!--Menus-->
    <string name="menu_prof">Profile</string>
    <string name="menu_trips">Adventures</string>
    <string name="menu_edit">Edit Adventure</string>
    <string name="menu_update">Update</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_add">Record Adventure</string>
    <string name="menu_stats">Statistics</string>
    <string name="menu_walking_record">Record Walking Adventure</string>
    <string name="menu_driving_record">Record Driving Adventure</string>
    <string name="menu_cycling_record">Record Cycling Adventure</string>

    <string name="menu_manual_record">Record Manual Adventure</string>
    <string name="menu_add_car">Add Vehicle</string>
    <string name="menu_list_trips">List Adventures</string>
    <string name="menu_logout">Logout</string>
    <string name="editProf">Edit Profile</string>
    <string name="editCar">Edit Vehicle</string>
    <string name="viewAdv">Your Adventure</string>
    <string name="tripsList">Adventures List</string>
    <string name="menu_list_cars">List Vehicles</string>
    <string name="menu_add_cars">Add Vehicles</string>

    <string name="record_speed">Speed: </string>
    <string name="record_time">Time: </string>
    <string name="record_steps">Steps: </string>
    <string name="record_cals">Calories: </string>

    <!--Record Categories-->
    <string name="rec_cyc">Cycling Adventure</string>
    <string name="rec_drive">Driving Adventure</string>
    <string name="rec_walk">Walking Adventure</string>

    <string name="veh_pick">Vehicle Used</string>

    <string name="stepgoal">Add a step goal for this journey:</string>
    <string name="weightinput">Weight in Kg</string>


    <!--Vehicle Add/Edit-->
    <string name="formVehName">Vehicle Name</string>
    <string name="formVehBrand">Brand</string>
    <string name="formVehModel">Model</string>
    <string name="formVehReg">License Plate</string>
    <string name="formVehYear">Year</string>
    <string name="formVehFuel">Fuel Type</string>
    <string name="formVehTank">Tank Capacity</string>
    <string name="formVehOdo">Odometer Count</string>

    <!--Trip Edit Form-->
    <string name="cycCat">Edit Cycling Adventure</string>
    <string name="driveCat">Edit Cycling Adventure</string>
    <string name="walkCat">Edit Walking Adventure</string>
    <string name="date">Edit Trip Date</string>
    <string name="name">Edit Trip Name</string>
    <string name="distance">Edit Distance</string>
    <string name="speed">Edit Average Speed</string>
    <string name="cals">Edit Calories Burned</string>
    <string name="steps">Edit Steps</string>

    <string name="favs">Add to Favourites</string>
    <string name="start">Time Initiated</string>
    <string name="end">Time Finished</string>









    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Adventurio</string>


    <string name="account">Done for today?</string>

    <!--Prof Strings-->
    <string name="btnDelUser">Delete Account</string>
    <string name="btnChangeImage">Change Image</string>
    <string name="hint_stepGoal">Overall Step Goal</string>
    <string name="hint_distanceGoal">Overall Walking Distance Goal (km)</string>
    <string name="hint_drivingDistanceGoal">Overall Driving Distance Goal (km)</string>
    <string name="hint_cyclingDistanceGoal">Overall Cycling Distance Goal(km)</string>




    <!--Trip-->
    <string name="hint_StepGoal">Step Goal (Optional)</string>
    <string name="btnDelTrip">Delete Trip</string>

    <!--Image Chooser-->
    <string name="imgPick">Select Profile Image</string>


    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>

    <!--Password Button-->
    <string name="btnShow">Show</string>
    <string name="btnHide">Hide</string>

    <!--Sample Data-->
    <!--Stats-->
    <string name="sample_category">Walking</string>
    <string name="sample_steps">2543 Steps</string>
    <string name="sample_time">1 Hours, 05 Minutes , 00 Seconds</string>
    <string name="sample_distance">3.5km</string>


    <string name="messageLoading">Loading User . . . </string>


    <!--Data Headers-->
    <!--Stats-->
    <string name="data_steps">Steps:</string>
    <string name="data_distance">Walking Distance:</string>
    <string name="data_ddistance">Driving Distance:</string>
    <string name="data_cdistance">Cycling Distance:</string>
    <string name="data_time">Time Elapsed:</string>
    <string name="data_category">Category:</string>
    <string name="data_timeStart">Time Initiated:</string>
    <string name="data_timeEnd">Time Finished:</string>
    <string name="data_phoneNo">Phone No.:</string>


    <string name="play">Touch the record button to begin!</string>

    <!--Profile-->
    <string name="data_name">Name:</string>
    <string name="data_username">Username:</string>
    <string name="data_email">Email:</string>
    <string name="data_weight">Weight:</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
