<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="10dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B1B1B1"
        android:padding="16dp">

        <TextView
            android:id="@+id/txtTripType"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="13dp"
            android:layout_marginTop="52dp"
            android:text="@string/sample_category"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:fontFamily="@font/alike_angular" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="wrap_content"
            android:layout_height="116dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="126dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="25dp" />

        <TextView
            android:id="@+id/txtStepCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mapView"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="13dp"
            android:text="@string/data_steps"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:fontFamily="@font/catamaran" />

        <TextView
            android:id="@+id/txtTotalSteps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mapView"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="50dp"
            android:text="@string/sample_steps"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:fontFamily="@font/catamaran" />

        <TextView
            android:id="@+id/txtDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtStepCount"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="17dp"
            android:text="@string/data_distance"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:fontFamily="@font/catamaran" />

        <TextView
            android:id="@+id/txtDistanceTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTotalSteps"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="50dp"
            android:text="@string/sample_distance"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:fontFamily="@font/catamaran" />

        <TextView
            android:id="@+id/txtTimeElapsedTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtDistanceTotal"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="50dp"
            android:text="@string/sample_time"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:fontFamily="@font/catamaran" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="13dp"
            android:layout_marginTop="30dp"
            android:text="@string/data_category"
            app:fontFamily="@font/amethysta" />

        <TextView
            android:id="@+id/txtTimeAndDate"
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTripType"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="-85dp"
            android:layout_marginEnd="0dp"
            android:gravity="center"
            android:padding="2dp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>